# LayoutVisualizer

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: integrate.yml  linux-codeql.yml  linux.yml  macos-codeql.yml  macos.yml  windows-codeql.yml  windows.yml
cmake/: README.md  clang_warnings.cmake  documentation.cmake  doxygen.cmake  env.cmake  find_package.cmake  gcc_warnings.cmake  msvc_warnings.cmake  policy.cmake  sanitizers.cmake
cmake/fetch/: doxygen-awesome-css.cmake
docs/: Doxyfile.in  cppreference-doxygen-web.tag.xml  footer.html  header.html  magic_enum-doxygen-web.tag.xml  post_doxygen.py
examples/: CMakeLists.txt
examples/RasterWindow/: CMakeLists.txt  RasterWindow.cpp  RasterWindow.h  main.cpp
examples/SimpleDemo/: CMakeLists.txt  Mac.h  Mac.mm  SimpleDemo.cpp  SimpleDemo.h  main.cpp
source/: CMakeLists.txt  LayoutVisualizer.cpp  LayoutVisualizer.h
tools/: CMakeLists.txt
tools/RasterWindow/: CMakeLists.txt  RasterWindow.cpp  RasterWindow.h  main.cpp
